<resources>
    <string name="app_name">WoT Blitz Wiki</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="vehicle_types_mask">Типов техники: %d</string>
    <string name="game_version">Game version</string>
    <string name="vehicle_types">Vehicle types</string>
    <string name="wiki_update_at">Updated at</string>
    <string name="crew_skill_description_label">Описание</string>
    <string name="crew_skill_tip_label">Подсказка</string>
    <string name="crew_skill_features_label">Особенности</string>
    <string name="crew_skill_effect_label">Эффект</string>
    <string name="error_request_limit_exceeded">Превышен лимит запросов, повторите позже</string>
    <string name="hint_empty_crew_skill_side_panel">Выберите умение из списка слева</string>

    <string name="percent_mask">%s %%</string>
    <string name="armor_mask">%d mm</string>
    <string name="error_internet_is_unavailable">Internet is unavailable</string>
    <string name="database_successfully_update">Database is update</string>
    <string name="error_entity_not_found">Данные не найдены в базе</string>
</resources>
