<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/loading"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_crew_skills"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toStartOf="@+id/crew_skill_side_panel" />

    <TextView
        android:id="@+id/tv_error_load_crew_skills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="gone" />

    <View
        android:background="@drawable/vertical_shadow"
        android:layout_toStartOf="@+id/crew_skill_side_panel"
        android:layout_width="2dp"
        android:layout_height="match_parent" />
    <ScrollView
        android:visibility="gone"
        android:id="@+id/crew_skill_side_panel"
        android:layout_width="220dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_empty_crew_skill_side_panel"
                android:text="@string/hint_empty_crew_skill_side_panel"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_gravity="center"
                android:padding="8dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:padding="8dp"
                android:visibility="gone"
                android:id="@+id/crew_skill_side_panel_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_crew_skill"
                        android:layout_width="48dp"
                        android:layout_height="48dp" />

                    <TextView
                        android:id="@+id/tv_crew_skill_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp" />

                </LinearLayout>

                <View
                    android:background="@drawable/horizontal_shadow"
                    android:layout_width="match_parent"
                    android:layout_height="4dp" />

                <TextView
                    android:id="@+id/tv_crew_skill_tip_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/crew_skill_tip_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/tv_crew_skill_tip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/tv_crew_skill_features_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/crew_skill_features_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/tv_crew_skill_features"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/tv_crew_skill_effect_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/crew_skill_effect_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/tv_crew_skill_effect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>
        </FrameLayout>

    </ScrollView>

</RelativeLayout>